# WeChatMsgDump

./: .gitignore  .gitmodules  AGENTS.md  README.md  overall_design.pu
source/: CMakeLists.txt
source/dbdecryptor/: CMakeLists.txt  defines.h
source/dbdecryptor/configs/: versionconfig.json
source/dbdecryptor/threads/: wxdbdecryptthread.cpp  wxdbdecryptthread.h  wxmemorythread.cpp  wxmemorythread.h
source/dbdecryptor/utils/: winprocessutils.cpp  winprocessutils.h
source/dbdecryptor/winprocessutils/: winprocessutils.cpp  winprocessutils.h
source/dbdecryptor/wxdbcombiner/: wxdbcombiner.cpp  wxdbcombiner.h
source/dbdecryptor/wxdbdecryptor/: wxdbdecryptor.cpp  wxdbdecryptor.h
source/dbdecryptor/wxmemoryreader/: wxmemoryreader.cpp  wxmemoryreader.h
source/dbreader/: CMakeLists.txt  wechatdbreader.cpp  wechatdbreader.h
source/dbreader/dbthreadpool/: databaseworker.cpp  databaseworker.h  dbthreadpool.cpp  dbthreadpool.h
source/include/: defines.h  global_interface.h  global_part_impl.cpp
source/include/dbdecryptor/: defines.h  wxdbcombiner.h  wxdbdecryptor.h  wxmemoryreader.h
source/msgcore/: CMakeLists.txt  main.cpp  main.h  msgcore.def
source/msglauncher/: CMakeLists.txt  startup.cpp
source/msgmain/: CMakeLists.txt  entry.cpp  entry.h  global.h  main.cpp  msgapplication.h  stdafx.cpp  stdafx.h  update_ts.bat
source/msgui/: CMakeLists.txt  main.cpp  msgapplication.cpp  msgapplication.h  stdafx.h  update_ts.bat
source/msgviewer/: CMakeLists.txt  entry.cpp  entry.h  stdafx.cpp  stdafx.h
source/wechatmsgdump/: CMakeLists.txt  startup.cpp
(+186 files in other folders)
